2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Element.java: (Element.postMessage):
	cleanup

	* src/com/fluendo/jst/SystemClock.java: (SystemClock.waitFunc):
	When we are right on time, we return OK.

	* src/com/fluendo/player/Cortado.java: (Cortado..realRun),
	(Cortado..paint), (Cortado.), (Cortado..mousePressed),
	(Cortado..mouseReleased), (Cortado..start), (Cortado..stop):
	Try to limit the number of repaints.
	Cancel any pending mouse operations in the status bar when we release
	the mouse button outside of it.

	* src/com/fluendo/player/Status.java: (Status.paint),
	(Status.setHaveAudio), (Status), (Status.setHavePercent),
	(Status.setSeekable), (Status.intersectSeekbar),
	(Status.findComponent), (Status.mouseReleased),
	(Status.mouseDragged):
	Try to limit the number of repaints.

2006-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* HACKING:
	* TODO:
	  add some notes
	* build.properties:
	* build.xml:
	* cortado.spec:
	  back to TRUNK
	* cortado.doap:
	  fix

=== release 0.2.2 ===

2006-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* NEWS:
	* RELEASE:
	* build.properties:
	* cortado.doap:
	  Releasing 0.2.2, "Really Tested Verily Exceptionally"

2006-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	* build.xml:
	* cortado.doap:
	* cortado.spec:
	  add doap file

2006-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.build):
	  wrap completely in try block and use extra var

2006-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.build):
	  Microsoft VM does not allow accessing http.agent, so try/catch

2006-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  make sure building the player depends on distinfo target
	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.build):
	  add a space
